2nd part of the annotated bibliography

--- a/references.bib
+++ b/references.bib
@@ -219,3 +219,59 @@
   publisher={IL: Dorsey, 2nd ed., University of Chicago Press}
 }
 
+@article{Jeon_Neppl_2019,
+  title={Economic pressure, parent positivity, positive parenting, and child social competence},
+  volume={28},
+  ISSN={1062-1024},
+  archiveLocation={2019-16625-001},
+  DOI={10.1007/s10826-019-01372-1},
+  abstractNote={Objectives: The current study examined how economic pressure impacts parental positivity and positive parenting separately for mothers and fathers, as well as how positivity and parenting impact child social competence. Methods: This study included 207 mothers, fathers, and their first-born child from toddlerhood through the preschool years. This study employed an Actor–Partner Interdependence Model which was developed to handle dyadic relationships to investigate the association between economic pressure, parental positivity, and positive parenting, separately for mother and father and the interdependent associations between them. Results: Results showed that economic pressure when the child was age 2 (Time 1) was negatively associated with maternal and paternal positivity and father positive parenting when the child was 3-4 years old (Time 2). Maternal positivity was associated with paternal positivity and mother positive parenting was associated with father positive parenting. In addition, maternal positivity was associated with mother positive parenting while paternal positivity was not significantly related to father positive parenting at Time 2. Parental positivity and positive parenting at Time 2 were both associated with child social competence at age 5 (Time 3), even after controlling for child social competence at age 2 (Time 1). Conclusions: The current results suggest that both maternal and paternal positivity and positive parenting are important protective factors for young children’s social competence even under times of economic adversity. (PsycINFO Database Record (c) 2019 APA, all rights reserved)},
+  number={5},
+  journal={Journal of Child and Family Studies},
+  author={Jeon, Shinyoung and Neppl, Tricia K.},
+  year={2019},
+  month={May},
+  pages={1402–1412}
+}
+
+@article{OReilly_Tokuno_Ebata_1986,
+  title={Cultural differences between Americans of Japanese and European ancestry in parental valuing of social competence},
+  volume={17},
+  ISSN={0047-2328},
+  archiveLocation={1986-27008-001},
+  abstractNote={Examined cultural differences in the development of social competence by analyzing 260 parents’ rankings of importance of 8 social competency items (assertiveness, good behavior, openness to experience, persistence, self-direction, sensitivity, sociability, and tolerance). Ss were all parents of children aged 8–18 yrs and included 157 mothers (mean age 40.8 yrs) and 103 fathers (mean age 42.8 yrs). 136 were Americans of European ancestry, and 124 were Americans of Japanese ancestry. A multiple analysis of covariance (MANCOVA) disclosed a significant main effect for ethnicity and for the interaction of ethnicity by age of child. Results are interpreted with respect to J. U. Ogbu’s (see record [rid]1981-30217-001[/rid]) model of cultural ecology, and it is concluded that the cultural background of parents affects their valuing of competencies in their children. (French & Spanish abstracts) (25 ref) (PsycINFO Database Record (c) 2017 APA, all rights reserved)},
+  number={1},
+  journal={Journal of Comparative Family Studies},
+  author={O’Reilly, Joseph P. and Tokuno, Kenneth A. and Ebata, Aaron T.},
+  year={1986},
+  pages={87–97}
+}
+
+@article{Huber2019,
+  title={The perspective matters: A multi-informant study on the relationship between social–emotional competence and preschoolers’ externalizing and internalizing symptoms},
+  volume={50},
+  ISSN={0009-398X},
+  archiveLocation={2019-32236-001},
+  DOI={10.1007/s10578-019-00902-8},
+  abstractNote={Recent research demands a multi-informant and multi-factorial assessment of preschool-age psychopathology. Based on a tripartite model, we tested the relationship between emotional and social competence and their contribution to externalizing and internalizing symptoms in a preschool-age community sample (N = 117, M = 4.67 years, SD = 2.75 months). We assessed teachers’ (N = 109) and parents’ (N = 77) perspective using the Strengths-and-Difficulties-Questionnaire and children’s perspective using the Berkeley-Puppet-Interview and a standardized emotional-competence-test (MeKKi). We found externalizing symptoms being negatively related to prosocial behavior in teachers’ and parents’ reports and positively related to social initiative in teachers’ reports. In teachers’ reports only, a mediation effect of emotional competence via social competence on externalizing symptoms was shown. Children, but not caregivers, reported internalizing symptoms being positively related to prosocial behavior. These results highlight the importance of multiple informants and especially of children’s self-perception in preschool-age psychopathology. (PsycINFO Database Record (c) 2019 APA, all rights reserved)},
+  number={6},
+  journal={Child Psychiatry and Human Development},
+  author={Huber, Laura and Plötner, Maria and In-Albon, Tina and Stadelmann, Stephanie and Schmitz, Julian},
+  year={2019},
+  month={Dec},
+  pages={1021–1036}
+}
+
+@article{Jose_Huntsinger_Huntsinger_Liaw_2000,
+  title={Parental Values and Practices Relevant to Young Children’s Social Development in Taiwan and the United States},
+  olume={31},
+  ISSN={0022-0221},
+  DOI={10.1177/0022022100031006002},
+  abstractNote={Self-reported parental values and child-rearing practices, and teacher-reported and observed children’s social skills, were compared among families of 40 preschool and kindergarten children in each of three cultural groups: Chinese in Taiwan, first-generation Chinese in the United States, and European Americans in the United States. As expected, both samples of Chinese parents more strongly endorsed traditional Chinese values and exerted more parental control over their children than did American parents. Observations of child social competence during a videotaped family interaction revealed no significant differences among the three ethnic groups. Ratings of parental directiveness and warmth during the videotaped family interaction showed that Chinese American parents, as compared to European American parents, were rated as significantly more directive but equally warm.},
+  number={6},
+  journal={Journal of Cross-Cultural Psychology},
+  author={Jose, Paul E. and Huntsinger, Carol S. and Huntsinger, Phillip R. and Liaw, Fong-Ruey},
+  year={2000},
+  month={Nov},
+  pages={677–702}
+}
