--- a/references.bib
+++ b/references.bib
@@ -275,3 +275,234 @@
   month={Nov},
   pages={677–702}
 }
+
+@article{denham1997parental,
+  title={Parental contributions to preschoolers' emotional competence: Direct and indirect effects},
+  author={Denham, Susanne A and Mitchell-Copeland, Jennifer and Strandberg, Katherine and Auerbach, Sharon and Blair, Kimberly},
+  journal={Motivation and emotion},
+  volume={21},
+  number={1},
+  pages={65--86},
+  year={1997},
+  publisher={Springer}
+}
+
+@article{walker2005gender,
+  title={Gender differences in the relationship between young children's peer-related social competence and individual differences in theory of mind},
+  author={Walker, Sue},
+  journal={The Journal of genetic psychology},
+  volume={166},
+  number={3},
+  pages={297--312},
+  year={2005},
+  publisher={Taylor \& Francis}
+}
+
+@article{gouley2008construct,
+  title={Construct validation of the social competence scale in preschool-age children},
+  author={Gouley, Kathleen Kiely and Brotman, Laurie Miller and Huang, Keng-Yen and Shrout, Patrick E},
+  journal={Social Development},
+  volume={17},
+  number={2},
+  pages={380--398},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+
+@article{webster1999social,
+  title={Social competence and conduct problems in young children: Issues in assessment},
+  author={Webster-Stratton, Carolyn and Lindsay, Deborah Woolley},
+  journal={Journal of clinical child psychology},
+  volume={28},
+  number={1},
+  pages={25--43},
+  year={1999},
+  publisher={Taylor \& Francis}
+}
+
+@article{Grusec_1994,
+  Abstract = {It is generally argued that parental use of specific discipline techniques (e.g., reasoning vs power assertion) differentially affects a child's internalization. This article offers an expanded formulation. Internalization as a result of discipline is proposed to be based on a child's accurate perception of the parental message and acceptance or rejection of it. Mechanisms promoting acceptance are perceptions of the parent's actions as appropriate, motivation to accept the parental position, and perception that a value has been self-generated. Features of the misdeed, discipline technique, child, and parent that affect accurate perception and acceptance–rejection are outlined. Other goals besides internalization, such as movement beyond the parent's position, maintenance of the child's self-esteem, and maintenance of the parent–child relationship, are discussed. (PsycINFO Database Record (c) 2016 APA, all rights reserved)},
+  Author = {Grusec, Joan E. and Goodnow, Jacqueline J.},
+  ISSN = {0012-1649},
+  Journal = {Developmental Psychology},
+  Keywords = {reasoning vs power assertion in parental discipline methods, internalization of values, children, Child Discipline, Childrearing Practices, Moral Development, Values, Cognition, Parent Child Relations, Reasoning, Interpersonal Control},
+  Number = {1},
+  Pages = {4 - 19},
+  Title = {Impact of parental discipline methods on the child's internalization of values: A reconceptualization of current points of view.},
+  Volume = {30},
+  URL = {http://search.ebscohost.com.libproxy.smith.edu:2048/login.aspx?direct=true&db=psyh&AN=1994-25033-001&site=ehost-live},
+  Year = {1994},
+}
+
+@article{Denham_2003,
+  Abstract = {Preschoolers' (N = 143) patterns of emotional expressiveness, emotion regulation, and emotion knowledge were assessed. Their contributions to social competence, as evidenced by sociometric likability and teacher ratings, were evaluated via latent variable modeling, both concurrently and across time. Moderation of key results by age and sex was also explored. Emotional competence assessed at 3 to 4 years of age contributed to both concurrent and kindergarten social competence. Even early in the preschool period, contributions of emotional competence to social competence have long-term implications. (PsycINFO Database Record (c) 2016 APA, all rights reserved)},
+  Author = {Denham, Susanne A. and Blair, Kimberly A. and DeMulder, Elizabeth and Levitas, Jennifer and Sawyer, Katherine and Auerbach-Major, Sharon and Queenan, Patrick},
+  ISSN = {0009-3920},
+  Journal = {Child Development},
+  Keywords = {emotional competence, social competence, teacher ratings, preschool students, Affect, Child, Preschool, Cognition, Female, Humans, Male, Social Behavior, Social Perception, Surveys and Questionnaires, Competence, Emotional Development, Emotionality (Personality), Peer Relations, Social Skills, Emotional Control, Preschool Students},
+  Number = {1},
+  Pages = {238 - 256},
+  Title = {Preschool emotional competence: Pathway to social competence.},
+  Volume = {74},
+  URL = {http://search.ebscohost.com.libproxy.smith.edu:2048/login.aspx?direct=true&db=psyh&AN=2003-01768-019&site=ehost-live},
+  Year = {2003}
+}
+
+@article{Miguel_2013,
+  Abstract = {Within the theoretical framework of social representations theory, a substantial body of literature has advocated and shown that, as interpretative systems and forms of knowledge concurring in the construction of a social reality, social representations are guides for action, influencing behaviours and social relations. Based on this assumption, the primary goal of the current study was to investigate the relationship between social representations of the development of intelligence and parenting styles while also examining the role played by the values that parents desire for their children. The sample included 466 subjects with educational responsibilities (117 fathers, 227 mothers and 122 mother–teachers). Participants completed a self-administered survey on their representations of the development of intelligence, values desired for their children and parenting styles. A theoretical model which examined the relations among these variables was tested. Structural equation modelling },
+  Author = {Miguel, Isabel and Valentim, Joaquim Pires and Carugati, Felice},
+  ISSN = {0256-2928},
+  Journal = {European Journal of Psychology of Education},
+  Keywords = {social representations, development of intelligence, parental values, parenting styles, social reality, children, Childhood Development, Intelligence, Parenting Style, Social Perception, Values, Reality},
+  Number = {4},
+  Pages = {1163 - 1180},
+  Title = {Social representations of the development of intelligence, parental values and parenting styles: A theoretical model for analysis.},
+  Volume = {28},
+  URL = {http://search.ebscohost.com.libproxy.smith.edu:2048/login.aspx?direct=true&db=psyh&AN=2013-40533-004&site=ehost-live},
+  Year = {2013}
+}
+
+@article{Parcel_2016,
+  Abstract = {Social bonds between parents and their children, an important form of social capital, promote children's cognition and their social adjustment. Both bonding and bridging social capital are consequential, as are parental norms and values, which vary by social class. Parents' working conditions, including occupational complexity and work schedules, influence children's home environments as well as their children's development. Family social capital is more important than school social capital in influencing both cognitive and social child outcomes. Recent studies show how fathers' roles are changing, with implications for social capital in families, and point to bonding with fathers as a possible mechanism for building social capital. We know relatively little about how different forms of capital, including financial, human, cultural, and social capital, combine to influence families and children. We need further analyses regarding how to build social capital, particularly for at‐risk c},
+Author = {Parcel, Toby L. and Bixby, Monica S.},
+ISSN = {1750-8592},
+Journal = {Child Development Perspectives},
+Keywords = {social capital, families, schools, parental work, cognition, social adjustment, fathers' roles, Family, Parent Child Relations, Parental Attitudes, Social Capital, Well Being},
+Number = {2},
+Pages = {87 - 92},
+Title = {The ties that bind: Social capital, families, and children's well‐being.},
+Volume = {10},
+URL = {http://search.ebscohost.com.libproxy.smith.edu:2048/login.aspx?direct=true&db=psyh&AN=2015-58548-001&site=ehost-live},
+Year = {2016},
+}
+
+@article{raby2015interpersonal,
+  title={The interpersonal antecedents of supportive parenting: A prospective, longitudinal study from infancy to adulthood.},
+  author={Raby, K Lee and Lawler, Jamie M and Shlafer, Rebecca J and Hesemeyer, Paloma S and Collins, W Andrew and Sroufe, L Alan},
+  journal={Developmental psychology},
+  volume={51},
+  number={1},
+  pages={115},
+  year={2015},
+  publisher={American Psychological Association}
+}
+
+@article{block1981parental,
+  title={Parental agreement-disagreement on child-rearing orientations and gender-related personality correlates in children},
+  author={Block, Jeanne H and Block, Jack and Morrison, Andrea},
+  journal={Child Development},
+  pages={965--974},
+  year={1981},
+  publisher={JSTOR}
+}
+
+article{gresham2018cross,
+  title={Cross-informant agreement of children's social-emotional skills: An investigation of ratings by teachers, parents, and students from a nationally representative sample},
+  author={Gresham, Frank M and Elliott, Stephen N and Metallo, Sarah and Byrd, Shelby and Wilson, Elizabeth and Cassidy, Kaitlan},
+  journal={Psychology in the Schools},
+  volume={55},
+  number={2},
+  pages={208--223},
+  year={2018},
+  publisher={Wiley Online Library}
+}
+
+@article{bos2015lesbian,
+  title={Lesbian and heterosexual two-parent families: Adolescent--parent relationship quality and adolescent well-being},
+  author={Bos, Henny and van Gelderen, Loes and Gartrell, Nanette},
+  journal={Journal of Child and Family Studies},
+  volume={24},
+  number={4},
+  pages={1031--1046},
+  year={2015},
+  publisher={Springer}
+}
+
+@article{meade2001stress,
+  title={Stress, emotional skill, and illness in children: the importance of distinguishing between children's and parents' reports of illness},
+  author={Meade, Jill A and Lumley, Mark A and Casey, Rita J},
+  journal={The Journal of Child Psychology and Psychiatry and Allied Disciplines},
+  volume={42},
+  number={3},
+  pages={405--412},
+  year={2001},
+  publisher={Cambridge University Press}
+}
+
+@article{zarra2014social,
+  title={Social withdrawal in children moderates the association between parenting styles and the children's own socioemotional development},
+  author={Zarra-Nezhad, Maryam and Kiuru, Noona and Aunola, Kaisa and Zarra-Nezhad, Mansour and Ahonen, Timo and Poikkeus, Anna-Maija and Lerkkanen, Marja-Kristiina and Nurmi, Jari-Erik},
+  journal={Journal of Child Psychology and Psychiatry},
+  volume={55},
+  number={11},
+  pages={1260--1269},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
+@article{potter2017psychosocial,
+  title={Psychosocial well-being in children of same-sex parents: A longitudinal analysis of familial transitions},
+  author={Potter, Daniel and Potter, Emma C},
+  journal={Journal of Family Issues},
+  volume={38},
+  number={16},
+  pages={2303--2328},
+  year={2017},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+
+@article{drexler2001moral,
+  title={Moral reasoning in sons of lesbian and heterosexual parent families: The oedipal period of development},
+  author={Drexler, Peggy, Fischman},
+  journal={Gender and psychoanalysis},
+  volume={6},
+  number={1},
+  pages={19--51},
+  year={2001},
+  publisher={International Universities Press, Inc.}
+}
+
+@book{powell2010counted,
+  title={Counted out: Same-sex relations and Americans' definitions of family},
+  author={Powell, Brian and Blozendahl, Catherine and Geist, Claudia and Steelman, Lala Carr},
+  year={2010},
+  publisher={Russell Sage Foundation}
+}
+
+@article{barone2017matter,
+  title={A matter of attachment? How adoptive parents foster post-institutionalized children’s social and emotional adjustment},
+  author={Barone, Lavinia and Lionetti, Francesca and Green, Jonathan},
+  journal={Attachment \& human development},
+  volume={19},
+  number={4},
+  pages={323--339},
+  year={2017},
+  publisher={Taylor \& Francis}
+}
+
+
+@article{spruijt2018linking,
+  title={Linking parenting and social competence in school-aged boys and girls: Differential socialization, diathesis-stress or differential susceptibility?},
+  author={Spruijt, Andrea Maria and Dekker, Marielle C and Ziermans, Tim B and Swaab, Hanna},
+  journal={Frontiers in psychology},
+  volume={9},
+  pages={2789},
+  year={2018},
+  publisher={Frontiers}
+}
+
+@article{grusec2007parents,
+title={Parents’ attitudes and beliefs: Their impact on children’s development},
+author={Grusec, Joan E},
+journal={New York: Parenting Skills},
+year={2007}
+}
+
+@article{missal2008critical,
+title={The critical nature of young children's emerging peer-related social competence for transition to school.},
+author={Missal, Kristen N and Hojnoski, Robin L},
+year={2008},
+publisher={Paul H Brookes Publishing}
+}
+
